--- a/.github/workflows/my-github-status.yml
+++ b/.github/workflows/my-github-status.yml
@@ -2,7 +2,7 @@ name: my-github-status
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 1,5"
   push:
     branches:
       - master
