--- a/.github/workflows/snake-commit.yaml
+++ b/.github/workflows/snake-commit.yaml
@@ -2,7 +2,7 @@ name: snake-commit
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 1,5"
   push:
     branches:
       - master
